syntax = "proto3";

package flow.sdk.entities;

option go_package = "entities";

import "google/protobuf/timestamp.proto";

message BlockHeader {
  bytes id = 1;
  bytes parent_id = 2;
  uint64 height = 3;
}

message Block {
  uint64 height = 1;
  bytes parent_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  repeated CollectionGuarantee collection_guarantees = 4;
  repeated BlockSeal block_seals = 5;
  repeated bytes signatures = 6;
}

message BlockSeal {
  bytes block_id = 1;
  bytes execution_receipt_id = 2;
  repeated bytes execution_receipt_signatures = 3;
  repeated bytes result_approval_signatures = 4;
}

message AccountSignature {
  bytes account = 1;
  bytes signature = 2;
}

enum TransactionStatus {
  STATUS_UNKNOWN = 0;
  STATUS_PENDING = 1;
  STATUS_FINALIZED = 2;
  STATUS_EXECUTED = 3;
  STATUS_SEALED = 4;
}

message Transaction {
  bytes script = 1;
  bytes reference_block_id = 2;
  bytes payer_account = 3;
  repeated bytes script_accounts = 4;
  repeated AccountSignature signatures = 5;
  TransactionStatus status = 6;
}

message Collection {
  repeated Transaction transactions = 1;
}

message CollectionGuarantee {
  bytes collectionHash = 1;
  repeated bytes signatures = 2;
}

message Account {
  bytes address = 1;
  uint64 balance = 2;
  bytes code = 3;
  repeated AccountPublicKey keys = 4;
}

message AccountPublicKey {
  bytes public_key = 1;
  uint32 sign_algo = 2;
  uint32 hash_algo = 3;
  uint32 weight = 4;
}

message Event {
  string type = 1;
  bytes transaction_id = 2;
  uint32 index = 3;
  bytes payload = 4;
}
